[package]
name = "mypipe"
version = "0.1.0"
authors = ["Matthieu Allexandre <matthieu.allexandre@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.0"
structopt = { version = "0.3", default-features = false }
